--- a/my-react-app/src/AdminPage.css
+++ b/my-react-app/src/AdminPage.css
@@ -14,6 +14,10 @@ td {
 tr {
   border-bottom: 1px solid #ded8d8;
 }
+.table-data {
+  display: flex;
+  justify-content: center;
+}
 .form-popup {
   display: none;
   bottom: 0;
