--- a/my-react-app/src/Dashboard.css
+++ b/my-react-app/src/Dashboard.css
@@ -8,7 +8,8 @@
   border-collapse: collapse;
 }
 .content {
-  padding: 100px 0px;
+  /* padding: 100px 0px; */
+  margin-top: 10px;
   flex: 1;
 }
 .search-desktop {
@@ -19,11 +20,12 @@
   bottom: 12px;
 }
 .delete-all-btn {
+  display: flex;
   background-color: red;
   color: #fff;
   border-radius: 30px;
-  height: 30px;
-  padding: 7px;
+  height: fit-content;
+  padding: 10px;
   margin-top: 35px;
   font-size: 15px;
   justify-items: center;
