--- a/my-react-app/src/Dashboard.css
+++ b/my-react-app/src/Dashboard.css
@@ -26,7 +26,7 @@
   border-radius: 30px;
   height: fit-content;
   padding: 10px;
-  margin-top: 35px;
+  margin: 15px;
   font-size: 15px;
   justify-items: center;
   cursor: pointer;
@@ -38,8 +38,10 @@
 @media screen and (max-width: 768px) {
   .footer {
     position: fixed;
-    bottom: 0;
     display: flex;
+  }
+  .delete-all-btn {
+    margin: 30px;
   }
 }
 @media screen and (min-width: 350px) and (max-width: 635px) {
