--- a/my-react-app/src/Pagination.css
+++ b/my-react-app/src/Pagination.css
@@ -1,6 +1,6 @@
 .pagination {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   background: #fff;
   color: blue;
@@ -9,6 +9,8 @@
 }
 ul {
   margin: 20px 10px;
+  display: flex;
+  width: 70%;
 }
 ul li {
   display: inline-block;
@@ -59,49 +61,44 @@ ul li.active {
   background-color: rgb(54, 54, 235);
   color: #fff;
 }
-.bt2.active {
+.btn2.active {
   border-color: blue;
   background-color: rgb(54, 54, 235);
   color: #fff;
 }
-.bt1.active {
+.btn1.active {
   border-color: blue;
   background-color: rgb(54, 54, 235);
   color: #fff;
 }
-@media screen and (max-width: 768px) {
-  .pagination {
-    bottom: 0;
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 0px;
-  }
+.delete-all-btn {
+  background-color: deeppink;
+  color: #fff;
+  border-radius: 30px;
+  height: 2.5rem;
+  font-size: 1rem;
+  justify-items: center;
+  cursor: pointer;
+  outline: none;
+  border: none;
 }
-@media screen and (max-width: 704px) {
-  .pagination {
-    bottom: 0;
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 0px;
-  }
+.btn {
+  width: 30%;
 }
-@media screen and (max-width: 660px) {
+@media only screen and (max-width: 600px) {
   .pagination {
-    bottom: 0;
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 0px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
   }
-}
-@media screen and (max-width: 400px) {
-  .pagination {
-    bottom: 0;
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 0px;
+  .delete-all-btn {
+    padding: 6px;
+  }
+  ul {
+    width: 100% !important;
+  }
+  .btn {
+    width: 100%;
+    position: sticky;
   }
 }
